MDEV-18813 PROCEDURE and anonymous blocks silently ignore FETCH GROUP NEXT ROW

Part#1: moving opt_if_not_exists from "sf_tail" and "sp_tail" to "create".