sql/sql_yacc.yy
@@ -2841,15 +2841,14 @@ create:
           {
             Lex->pop_select(); //main select
           }
-        | create_or_replace definer_opt PROCEDURE_SYM
+        | create_or_replace definer_opt PROCEDURE_SYM opt_if_not_exists
           {
-            if (Lex->main_select_push())
+            if (Lex->stmt_create_procedure_start($1 | $4))
               MYSQL_YYABORT;
-            Lex->create_info.set($1);
           }
           sp_tail
           {
-            Lex->pop_select(); //main select
+            Lex->stmt_create_routine_finalize();
           }
         | create_or_replace definer_opt EVENT_SYM
           {
@@ -2861,45 +2860,41 @@ create:
           {
             Lex->pop_select(); //main select
           }
-        | create_or_replace definer FUNCTION_SYM
+        | create_or_replace definer FUNCTION_SYM opt_if_not_exists
           {
-            if (Lex->main_select_push())
+            if (Lex->stmt_create_function_start($1 | $4))
               MYSQL_YYABORT;
-            Lex->create_info.set($1);
           }
           sf_tail
           {
-            Lex->pop_select(); //main select
+            Lex->stmt_create_routine_finalize();
           }
-        | create_or_replace definer AGGREGATE_SYM FUNCTION_SYM
+        | create_or_replace definer AGGREGATE_SYM FUNCTION_SYM opt_if_not_exists
           {
-            if (Lex->main_select_push())
+            if (Lex->stmt_create_function_start($1 | $5))
               MYSQL_YYABORT;
-            Lex->create_info.set($1);
           }
           sf_tail_aggregate
           {
-            Lex->pop_select(); //main select
+            Lex->stmt_create_routine_finalize();
           }
-        | create_or_replace no_definer FUNCTION_SYM
+        | create_or_replace no_definer FUNCTION_SYM opt_if_not_exists
           {
-            if (Lex->main_select_push())
+            if (Lex->stmt_create_function_start($1 | $4))
               MYSQL_YYABORT;
-            Lex->create_info.set($1);
           }
           create_function_tail
           {
-            Lex->pop_select(); //main select
+            Lex->stmt_create_routine_finalize();
           }
-        | create_or_replace no_definer AGGREGATE_SYM FUNCTION_SYM
+        | create_or_replace no_definer AGGREGATE_SYM FUNCTION_SYM opt_if_not_exists
           {
-            if (Lex->main_select_push())
+            if (Lex->stmt_create_function_start($1 | $5))
               MYSQL_YYABORT;
-            Lex->create_info.set($1);
           }
           create_aggregate_function_tail
           {
-            Lex->pop_select(); //main select
+            Lex->stmt_create_routine_finalize();
           }
         | create_or_replace USER_SYM opt_if_not_exists clear_privileges
           grant_list opt_require_clause opt_resource_options opt_account_locking opt_password_expiration
@@ -17744,18 +17739,15 @@ trigger_tail:
 **************************************************************************/
 
 udf_tail:
-          opt_if_not_exists ident
-          RETURNS_SYM udf_type SONAME_SYM TEXT_STRING_sys
+          ident RETURNS_SYM udf_type SONAME_SYM TEXT_STRING_sys
           {
             LEX *lex= thd->lex;
-            if (unlikely(lex->add_create_options_with_check($1)))
-              MYSQL_YYABORT;
-            if (unlikely(is_native_function(thd, & $2)))
-              my_yyabort_error((ER_NATIVE_FCT_NAME_COLLISION, MYF(0), $2.str));
+            if (unlikely(is_native_function(thd, & $1)))
+              my_yyabort_error((ER_NATIVE_FCT_NAME_COLLISION, MYF(0), $1.str));
             lex->sql_command= SQLCOM_CREATE_FUNCTION;
-            lex->udf.name= $2;
-            lex->udf.returns= (Item_result) $4;
-            lex->udf.dl= $6.str;
+            lex->udf.name= $1;
+            lex->udf.returns= (Item_result) $3;
+            lex->udf.dl= $5.str;
           }
         ;
 
@@ -17777,11 +17769,9 @@ sf_return_type:
         ;
 
 sf_tail:
-          opt_if_not_exists
           sp_name
           {
-            Lex->sql_command= SQLCOM_CREATE_SPFUNCTION;
-            if (unlikely(!Lex->make_sp_head_no_recursive(thd, $1, $2,
+            if (unlikely(!Lex->make_sp_head_no_recursive(thd, $1,
                                                          &sp_handler_function)))
               MYSQL_YYABORT;
           }
@@ -17803,10 +17793,9 @@ sf_tail:
         ;
 
 sp_tail:
-          opt_if_not_exists sp_name
+          sp_name
           {
-            Lex->sql_command= SQLCOM_CREATE_PROCEDURE;
-            if (unlikely(!Lex->make_sp_head_no_recursive(thd, $1, $2,
+            if (unlikely(!Lex->make_sp_head_no_recursive(thd, $1,
                                                          &sp_handler_procedure)))
               MYSQL_YYABORT;
           }
